suvidha-2026/error_utf8.log
node.exe : C:\Users\parva\OneDrive\Desktop\suvid
ha\suvidha-2026\node_modules\ts-node\src\index.t
s:859
At C:\Program Files\nodejs\npx.ps1:29 char:3
+   & $NODE_EXE $NPX_CLI_JS $args
+   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: 
(C:\Use    rs\parva\...rc\index.ts:859:String) 
[], RemoteE    xception
    + FullyQualifiedErrorId : NativeCommandError
 
    return new TSError(diagnosticText, 
diagnosticCodes, diagnostics);
           ^
TSError: Γ¿» Unable to compile TypeScript:
prisma/seed.ts(4,5): error TS2353: Object 
literal may only specify known properties, and 
'datasourceUrl' does not exist in type 
'Subset<PrismaClientOptions, 
PrismaClientOptions>'.

    at createTSError (C:\Users\parva\OneDrive\De
sktop\suvidha\suvidha-2026\node_modules\ts-node\
src\index.ts:859:12)
    at reportTSError (C:\Users\parva\OneDrive\De
sktop\suvidha\suvidha-2026\node_modules\ts-node\
src\index.ts:863:19)
    at getOutput (C:\Users\parva\OneDrive\Deskto
p\suvidha\suvidha-2026\node_modules\ts-node\src\
index.ts:1077:36)
    at Object.compile (C:\Users\parva\OneDrive\D
esktop\suvidha\suvidha-2026\node_modules\ts-node
\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\parva\OneDriv
e\Desktop\suvidha\suvidha-2026\node_modules\ts-n
ode\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1895:10
    at Object.require.extensions.<computed> [as 
.ts] (C:\Users\parva\OneDrive\Desktop\suvidha\su
vidha-2026\node_modules\ts-node\src\index.ts:162
1:12)
    at Module.load 
(node:internal/modules/cjs/loader:1465:32)
    at Function._load 
(node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync 
(node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2353 ]
}
